# serde_bug

./: Cargo.toml  test.toml
src/: main.rs
