[package]
name = "serde_bug"
version = "0.1.0"
authors = ["vjancik <viktor.vix.jancik@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.119", features = ["derive"] }
toml = "0.5.8"
